Fix scroll-to-top button visibility and behavior (#8053)

--- a/console/frontend/src/main/frontend/src/assets/css/bootstrap-fix.css
+++ b/console/frontend/src/main/frontend/src/assets/css/bootstrap-fix.css
@@ -27,9 +27,10 @@ app-pages-navigation {
 
 /* SCROLL TO TOP BUTTON */
 .scroll-to-top {
-  opacity: 0;
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
   position: fixed;
-  z-index: 10000;
   bottom: 20px;
   margin-left: 15px;
   padding: 2px 10px;
@@ -38,6 +39,11 @@ app-pages-navigation {
   border-radius: 3px;
   border: 1px solid #293846;
   background: #293846;
+}
+
+.scroll-to-top.hidden-scroll {
+  visibility: hidden;
+  opacity: 0;
 }
 
 .scroll-to-top:hover {
